[JSC] DFG strength reduction should define "groups" for RegExp constant-folded result https://bugs.webkit.org/show_bug.cgi?id=204264

Reviewed by Michael Saboff.

JSTests:

* stress/dfg-strength-reduction-for-regexp-should-include-groups-property.js: Added.
(shouldBe):
(test):

Source/JavaScriptCore:

We always define "groups" property in the result of RegExp matching.
But we do not define it when DFG performs strength-reduction for the RegExp matching node.
This patch adds "groups" field correctly.

* dfg/DFGStrengthReductionPhase.cpp:
(JSC::DFG::StrengthReductionPhase::handleNode):
* runtime/RegExpMatchesArray.cpp:
(JSC::createEmptyRegExpMatchesArray):

Canonical link: https://commits.webkit.org/217549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252514 268f45cc-cd09-0410-ab3c-d52691b4dbfc